--- a/EstesiProyecto/EstesiProyecto.csproj
+++ b/EstesiProyecto/EstesiProyecto.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Form Users\FormModUser.Designer.cs">
       <DependentUpon>FormModUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCrearFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCrearFactura.Designer.cs">
+      <DependentUpon>FormCrearFactura.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form Users\FormModUser.resx">
       <DependentUpon>FormModUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCrearFactura.resx">
+      <DependentUpon>FormCrearFactura.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
